# Zyra

./: .gitattributes  .gitignore  AGENTS.md  README.md  build.zig  build.zig.zon
.github/workflows/: benchmark.yml  hical-benchmark.yml
benchmark/drogon/: CMakeLists.txt  README.md  drogon_server.cpp
benchmark/hical/: CMakeLists.txt  README.md  hical_server.cpp
examples/: basic.zig  json_api.zig  logging.zig  middleware.zig  routing.zig  static.zig
src/: zyra.zig
src/core/: cors.zig  header_map.zig  http.zig  log.zig  memory_pool.zig  meta_routes.zig  middleware.zig  multipart.zig  native_http.zig  openapi.zig  router.zig  schema.zig  server.zig  session.zig  static_files.zig  typed_route.zig  websocket.zig  ws_hub.zig
src/io/: zio_backend.zig
